# advent-of-code

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  add_day.sh  requirements_lock.txt
2022/01/: 01.1.py  01.2.py
2022/02/: 02.1.py
2023/01/: 01.1.py  01.2.py
2023/02/: 02.1.py  02.2.py
2024/01/: BUILD.bazel  main.cpp  main.py
2024/02/: BUILD.bazel  main.cpp
2024/02/data/: test_input.txt  test_input_notes.txt
2024/03/: main.cpp
2024/04/: BUILD.bazel  main.cpp
2024/05/: main.cpp
2024/05/data/: test_input_2.txt
2024/06/: main.cpp
common/: file_import.py  template.cpp  template.py
