"""
Bazel Modules file for advent of code problems. This defines the
bazel packages that we are using.
"""

# Module Declaration
module(
    name = "advent-of-code",
    version = "1.0.0",
    repo_name = "advent-of-code",
)

# Project Dependencies
bazel_dep(name = "aspect_bazel_lib", version = "2.5.3")
bazel_dep(name = "aspect_rules_lint", version = "0.14.2")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "rules_multirun", version = "0.9.0")
bazel_dep(name = "platforms", version = "0.0.9")
bazel_dep(name = "rules_python", version = "0.29.0")

# Extensions
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pypi")
