load("@rules_python//python:defs.bzl", "py_binary")

filegroup(
    name = "input",
    srcs = glob([
        "data/*.txt",
    ]),
)

py_binary(
    name = "main_py",
    srcs = ["main.py"],
    data = [
        ":input",
    ],
    main = "main.py",
)

cc_binary(
    name = "main_cpp",
    srcs = [
        "main.cpp",
    ],
    copts = ["-std=c++17"],
    data = [
        ":input",
    ],
)
