load("@rules_rust//rust:defs.bzl", "rust_binary")

filegroup(
    name = "input",
    srcs = glob([
        "data/*.txt",
    ]),
)

cc_binary(
    name = "main",
    srcs = [
        "main.cpp",
    ],
    args = [
        "--logtostdout",
    ],
    copts = [
        "-std=c++17",
    ],
    data = [
        ":input",
    ],
    deps = [
        "@gflags",
        "@glog",
    ],
)

# rust_binary(
#     name = "hello_world_from_workspace_transient",
#     srcs = ["src/main.rs"],
#     deps = [
#         "@crates_in_workspace//:anyhow",
#     ],
# )
